--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@
   background-color: #F8F9FA;
   width: 100vw;
   height: 100%;
+  background-size: 100% 100%;
 }
 
 footer {
@@ -32,20 +33,56 @@ body, input[type="text"], button {
   font-family: Cambria, Georgia;
 }
 
+.title-header {
+  display: inline;
+  color: #F8F9FA;
+  padding-bottom: 25px;
+  margin-left: 10px;
+}
+
+.log-out-button {
+  background-image: url("../assets/images/logout.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  overflow: hidden;
+  float: right;
+  width: 60px;
+  height: 60px;
+}
+
+.log-out-button:hover {
+  -webkit-box-shadow: 0 5px 20px 0 rgba(194, 194, 194, 0.6);
+  box-shadow: 0 5px 20px 0 rgba(194, 194, 194, 0.6);
+  -webkit-border-radius: 15px 15px 15px 15px;
+  border-radius: 15px 15px 15px 15px;
+}
+
+.log-out-button:active {
+  -moz-transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  -o-transform: scale(0.95);
+  -ms-transform: scale(0.95);
+  transform: scale(0.95);
+}
+
 /* everywhere else */
 
-.coronabtn{
-  background-color: #C2666E;
+.welcome-header {
+  color: #fdf7f7;
+}
+
+.btn-corona-header {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #fdf7f7;
   border: none;
-  color: white;
-  padding: 15px 80px;
+  color: #C2666E;
+  font-size: 16px;
+  padding: 15px 50px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  text-transform: uppercase;
-  font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
-  box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+  -webkit-box-shadow: 0 10px 30px 0 rgba(194, 194, 194, 0.4);
+  box-shadow: 0 10px 30px 0 rgba(194, 194, 194, 0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
   margin: 5px 20px 40px 20px;
@@ -56,11 +93,11 @@ body, input[type="text"], button {
   transition: all 0.3s ease-in-out;
 }
 
-.coronabtn:hover {
-  background-color: #D6666E;
+.btn-corona-header:hover {
+  background-color: #e9e9e9;
 }
 
-.coronabtn:active {
+.btn-corona-header:active {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
