--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<div>
 <div class = "login-container">
   <div class="wrapper fadeInDown">
     <div id="formContent">
@@ -35,4 +36,6 @@
 
     </div>
   </div>
+</div>
+
 </div>
