--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./assets/bootstrap/css/bootstrap.min.css"
+
+@import "./assets/bootstrap/css/bootstrap.min.css";
+body {
+    background-color: #f1f1f1;
+    background-size: cover;
+}
+
+footer {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
