--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -5,7 +5,7 @@
     <div class="card-body">
       <h5 class="card-title">Impossible d'accéder à cette page.</h5>
       <p class="card-text">C'est peut-être car vous n'y êtes pas autorisé, ou que vous êtes déconnecté.</p>
-      <a routerLink="/login" class="coronabtn">Se connecter</a>
+      <a routerLink="/login" class="btn-corona">Se connecter</a>
     </div>
     <div class="card-footer text-muted">
       BlockCovid
