--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
             </div>
           </div>
           <div class="form-group">
-            <input type="submit" class="fadeIn fourth" value="Se connecter" />
+            <input type="submit" class="fadeIn fourth btn-corona" value="Se connecter" />
             <div *ngIf="submitted && f.username.errors == null && f.password.errors == null && !connected">Pseudo ou mot
               de passe incorrect</div>
           </div>
