--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
           </div>
           <div class="form-group">
             <input type="submit" class="fadeIn fourth btn-corona" value="Se connecter" />
-            <div *ngIf="submitted && f.username.errors == null && f.password.errors == null && !connected">Pseudo ou mot
+            <div *ngIf="submitted && f.username.errors == null && f.password.errors == null && !isConnected">Pseudo ou mot
               de passe incorrect</div>
           </div>
         </div>
