--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
 
 footer {
     text-align: center;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
@@ -22,8 +22,8 @@ footer {
     text-decoration: none;
     display: inline-block;
     font-size: 15px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
-    box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+    -webkit-box-shadow: 0 10px 30px 0 rgba(194, 194, 194, 0.7);
+    box-shadow: 0 10px 30px 0 rgba(194, 194, 194, 0.7);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
     -webkit-transition: all 0.3s ease-in-out;
@@ -34,6 +34,8 @@ footer {
 }
 
 .btn-corona:hover {
+    text-decoration: none;
+    color: #f1f1f1;
     background-color: #D6666E;
 }
 
@@ -89,7 +91,6 @@ a {
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
 }
-
 
 /* FORM TYPOGRAPHY*/
 
