--- a/src/app/components/inscription/inscription.component.css
+++ b/src/app/components/inscription/inscription.component.css
@@ -22,12 +22,17 @@
     z-index: 1;
 }
 
-.btn-primary{
+.btn-primary {
     background-color: #C2666E;
     border-color: #D6666E;
 }
 
-.btn-primary:hover{
+.btn-primary:hover {
     background-color: #D6666E;
     border-color: #C2666E;
+}
+
+.bootstrap-overrides:focus {
+    border-color: #f1f1f1;
+    box-shadow: 0 0 0 0.18rem rgb(194, 102, 110, 0.6);
 }
