--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,8 @@ h1 {
   color: #C2666E;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+  text-decoration: none;
+  
 }
 
 h2, h3 {
