--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,18 +1,40 @@
-<div class="card ">
-    <div class="card-header">
-        Rappel des gestes barrières
+<div class="card">
+    <div class="card-header text-corona">
+        Rappel des mesures sanitaires covid:
     </div>
-    <div class="card-body">
-        <img class="img-corona" src='../assets/images/Geste-barriere-laver-main.png'>
-        <p class="text-corona">Se laver les mains régulièrement surtout après avoir fait une grosse crotte</p>
-        <br>
-        <img class="img-corona" src="../assets/images/Geste-barriere-atchoum.png">
-        <p class="text-corona">Eternuer dans un mouchoir au lieu d'avoir ta morve sur tes mains comme un gros dégueulasse </p>
-        <br>
-        <img class="img-corona" src="../assets/images/Geste-barriere-1m50.png">
-        <p class="text-corona">Rester à distance d'1m50 parce que les gens puent </p>
-        <br>
-        <img class="img-corona" src="../assets/images/Geste-barriere-poignee.png">
-        <p class="text-corona">Ne pas se faire de check ou des conneries du genre</p>♥
+    <div class="card-body table" >
+        <table>
+            <tr>
+                <td><img class="img-corona" src='../assets/images/Geste-barriere-laver-main.png'>
+                    <p class="text-corona">Se laver les mains régulièrement</p>
+                </td>
+
+                <td><img class="img-corona" src="../assets/images/Geste-barriere-poignee.png">
+                    <p class="text-corona">Limiter vos contacts rapprochés autant que possible</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img class="img-corona" src="../assets/images/Geste-barriere-atchoum.png">
+                    <p class="text-corona">Éternuer dans un mouchoir en papier ou le pli du coude</p>
+                </td>
+                <td>
+                    <img class="img-corona" src="../assets/images/Geste-barriere-1m50.png">
+                    <p class="text-corona">Appliquer une distance de sécurité d'1m50</p>
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <img class="img-corona" src="../assets/images/Geste-barriere-masque.png">
+                    <p class="text-corona">Le port du masque est obligatoire</p>
+                </td>
+                <td>
+                    <h1 class="text-corona-secondary">
+                        Protégez-vous, protégez vos proches, protégez les autres !
+                    </h1>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
